# aiphoria

./: CONTRIBUTORS.md  FORK_ATTRIBUTION_GUIDE.md  FORK_ATTRIBUTION_IMPLEMENTATION.md  IMPORT_CHANGES.md  IMPORT_CHANGES_DETAILED.md  LICENSE  MANIFEST.in  PACKAGE_DEVELOPER_GUIDE.md  PACKAGE_REFACTORING_COMPLETE.md  PACKAGE_STATUS_REPORT.md  PACKAGE_STRUCTURE.md  PACKAGE_STRUCTURE_GUIDE.md  README.md  REFACTORING_COMPLETE.txt  REFACTORING_DETAILS.md  REFACTORING_FINAL_REPORT.txt  REFACTORING_SUMMARY.md  __init__.py  example.ipynb  pyproject.toml  setup.py  verify_package.py
.backup_structure/core/: datavisualizer.py  utils.py
aiphoria/: __init__.py
aiphoria/core/: __init__.py  builder.py  datastructures.py  datavisualizer.py  flowmodifiersolver.py  network_graph.py  utils.py
core/: __init__.py  builder.py  flowsolver.py  network_graph.py
lib/odym/modules/: __init__.py
